--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,19 @@
 {
+  "name": "jlandfried/drupal-7-cache-provider",
+  "description": "Guzzle cache provider that utilizes a drupal cache object",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Jeff Landfried",
+      "email": "jlandfri@gmail.com"
+    }
+  ],
   "require": {
     "doctrine/cache": "~1.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "jlandfried\\": "src"
+    }
   }
 }
